--- a/backend/package.json
+++ b/backend/package.json
@@ -4,26 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "node index.js"
+    "server": "node dist/server.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "adm-zip": "^0.5.10",
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "ffmpeg": "^0.0.4",
-    "fs": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "openssl-nodejs": "^1.0.5",
-    "path": "^0.12.7",
-    "unzipper": "^0.10.11"
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
+    "@types/mysql": "^2.15.21",
+    "@types/node": "^20.6.0",
+    "typescript": "^5.2.2"
   }
 }
