--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
+
+# Compiled Typescript
+/dist
+
+# System files
+/uploads/*
