--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,44 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "url":"http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+      {
+          "type": "chrome",
+          "request": "launch",
+          "name": "Launch Chrome against localhost",
+          "skipFiles": [
+              "<node_internals>/**"
+          ],
+          "url": "http://localhost:3000",
+          "webRoot": "${workspaceFolder}/frontend"
+      },
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "Start React.js Server",
+          "program": "${workspaceFolder}/frontend/node_modules/react-scripts/scripts/start.js",
+          "args": [
+              "start"
+          ],
+          "cwd": "${workspaceFolder}/frontend",
+          "runtimeExecutable": "npm",
+          "runtimeArgs": [
+              "run-script",
+              "start"
+          ],
+          "env": {
+              "PORT": "3000" // You can specify the port your React.js server uses
+          },
+          "skipFiles": [
+              "<node_internals>/**"
+          ],
+          "outFiles": [],
+          "sourceMaps": true
+      }
+  ],
+  "compounds": [
+      {
+          "name": "Frontend and Chrome",
+          "configurations": ["Start React.js Server", "Launch Chrome against localhost"]
+      }
+  ]
 }
