--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.1"
   }
 }
