--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,7 +10,10 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [
+        "es5", "es6", "dom", "dom.iterable"
+    ]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
